# python-base

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/python_base/: __init__.py
tests/: test_calculator.py
